# PawnManager

./: .clang-format  .gitignore  Building.cpp  Building.h  CMakeLists.txt  ClientMain.cpp  CraftBuilding.h  Entity.cpp  Entity.h  FighterPawn.cpp  FighterPawn.h  GameWindow.h  GameWindowManager.h  Patterns.md  Pawn.cpp  Pawn.h  PawnManagerClient.cpp  PawnManagerClient.h  PawnRenderer.cpp  Player.cpp  Player.h  README.md  Readme.md  Recipe.cpp  Recipe.h  Resource.h  ResourceEntity.cpp  ResourceEntity.h  ShootRecipe.h  Structure.md  Task.cpp  Task.h  WorkerPawn.cpp  WorkerPawn.h  WorkerRecipe.h  client.h  connection.h  dlib  dlib2  general.h  (+6 more)
src/: ClientMain.cpp  Event.cpp  Event.h  IDmanager.cpp  IDmanager.h  LocalController.cpp  LocalController.h  Player.cpp  Player.h  Resource.h  ServerMain.cpp  ServerMain.h  Task.cpp  Task.h  godobject.cpp  godobject.h  testSystem.cpp  testSystem.h
src/Core/: Event.cpp  Event.h  IDmanager.cpp  IDmanager.h  LocalController.cpp  LocalController.h  Player.cpp  Player.h  Resource.h  ServerMain.cpp  ServerMain.h  Task.cpp  Task.h  godobject.cpp  godobject.h  testSystem.cpp
src/Entities/: Entity.cpp  Entity.h  ResourceEntity.cpp  ResourceEntity.h
src/Entities/Buildings/: Building.cpp  Building.h  BuildingRegisty.cpp  BuildingRegisty.h  CraftBuilding.cpp  CraftBuilding.h
src/Entities/Pawns/: FighterPawn.cpp  FighterPawn.h  Pawn.cpp  Pawn.h  WorkerPawn.cpp  WorkerPawn.h
src/GUI/: ArrowControl.cpp  ArrowControl.h  BuildBuildingWindow.cpp  BuildBuildingWindow.h  BuildingRenderer.cpp  BuildingRenderer.h  BuildingResultControl.cpp  BuildingResultControl.h  ButtonControl.cpp  ButtonControl.h  CMakeLists.txt  ClientMain.cpp  Color.cpp  Color.h  Control.cpp  Control.h  CraftBuildingWindow.cpp  CraftBuildingWindow.h  EmbeddedFont.h  FighterPawnControlWindow.cpp  FighterPawnControlWindow.h  FontManager.cpp  FontManager.h  GameWindow.cpp  GameWindow.h  GameWindowManager.cpp  GameWindowManager.h  LabelControl.cpp  LabelControl.h  MainMenuWindow.cpp  MainMenuWindow.h  PawnManagerClient.cpp  PawnManagerClient.h  PawnRenderer.cpp  PawnRenderer.h  Rect.h  RenderTarget.cpp  RenderTarget.h  ResourceRenderer.cpp  ResourceRenderer.h  (+7 more)
src/Recipes/: BuildRecipe.cpp  BuildRecipe.h  CraftRecipe.cpp  CraftRecipe.h  Recipe.cpp  Recipe.h  ShootRecipe.h  WorkerRecipe.cpp  WorkerRecipe.h
src/net/: CMakeLists.txt  blocking_map.h  blocking_queue.h  client.h  connection.h  general.h  mqueue.h  packet.h  server.h  test_client.cpp  test_server.cpp
